# gobov2

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac
examples/: Makefile-posix  Makefile.am
examples/apps/: Makefile.am
examples/apps/cli/: Makefile.am  main.c
include/: Makefile.am
include/gobo/: Makefile.am  cli.h  config.h  error.h  instance.h  tasklet.h
include/gobo/platform/: Makefile.am  alarm-micro.h  alarm-milli.h  debug_uart.h  logging.h  misc.h  random.h  time.h  toolchain.h  uart.h
script/: clang-format-check.sh
src/: Makefile.am
src/cli/: Makefile.am  cli.cpp  cli.hpp  cli_server.hpp  cli_uart.cpp  cli_uart.hpp
src/core/: Makefile.am  gobo-core-config.h  gobo-core-default-config.h
src/core/api/: instance_api.cpp  tasklet_api.cpp
src/core/common/: code_utils.hpp  debug.hpp  encoding.hpp  instance.cpp  instance.hpp  locator.cpp  locator.hpp  logging.cpp  logging.hpp  new.hpp  owner-locator.hpp  random.hpp  string.cpp  string.hpp  tasklet.cpp  tasklet.hpp  timer.cpp  timer.hpp
src/core/crypto/: aes_ccm.cpp  aes_ccm.hpp  aes_ecb.cpp  aes_ecb.hpp  hmac_sha256.cpp  hmac_sha256.hpp  mbedtls.cpp  mbedtls.hpp  sha256.cpp  sha256.hpp
src/core/utils/: heap.cpp  heap.hpp  wrap_stdbool.h  wrap_stdint.h  wrap_string.h
tests/: Makefile.am
tests/unit/: Makefile.am  test_aes.cpp  test_heap.cpp  test_platform.cpp  test_platform.h
